@@ -384,6 +384,34 @@ void YApplication::resetSignals() {
     sigprocmask(SIG_SETMASK, &oldSignalMask, &mask);
 }
 
+void YApplication::closeFiles() {
+#ifdef linux   /* for now, some debugging code */
+    int             i, max = 1024;
+    struct rlimit   lim;
+
+    if (getrlimit(RLIMIT_NOFILE, &lim) == 0)
+        max = lim.rlim_max;
+
+    for (i = 3; i < max; i++) {
+        int fl;
+        if (fcntl(i, F_GETFD, &fl) == 0) {
+            if (!(fl & FD_CLOEXEC)) {
+                char path[64];
+                char buf[1024];
+
+                memset(buf, 0, sizeof(buf));
+                sprintf(path, "/proc/%d/fd/%d", getpid(), i);
+                if (readlink(path, buf, sizeof(buf) - 1));
+
+                warn("File still open: fd=%d, name=%s", i, buf);
+                warn("Closing file descriptor: %d", i);
+                close (i);
+            }
+        }
+    }
+#endif
+}
+
 int YApplication::runProgram(const char *path, const char *const *args) {
     flushXEvents();
 
@@ -403,29 +431,7 @@ int YApplication::runProgram(const char *path, const char *const *args) {
         if (open("/dev/null", O_RDONLY) != 0)
             _exit(1);
 #endif
-#ifdef linux   /* for now, some debugging code */
-        {
-            /* close all files */
-
-            int             i, max = 1024;
-            struct rlimit   lim;
-
-            if (getrlimit(RLIMIT_NOFILE, &lim) == 0)
-                max = lim.rlim_max;
-
-            for (i = 3; i < max; i++) {
-                int fl;
-                if (fcntl(i, F_GETFD, &fl) == 0) {
-                    if (!(fl & FD_CLOEXEC)) {
-                        warn("file descriptor still open: %d. "
-                             " Check /proc/$icewmpid/fd/%d when running next time. "
-                             "Please report a bug (perhaps not an icewm problem)!", i, i);
-                    }
-                }
-                close (i);
-            }
-        }
-#endif
+        closeFiles();
 
         if (args)
             execvp(path, (char **)args);
