@@ -2,6 +2,7 @@
 	- improve selection of "urgent" windows with alt+tab
 	- fix possible crash (Grant McDorman)
 	- fix 64bit usage of Xft (Marcus Meissner)
+	- cleanup warning on still-open file descriptors
 
 1.2.20: 2005-01-09
 	- fix+revert default binding for MouseWinMove an MouseWinSize
